fix spacing

--- a/src/assets/style/_code.scss
+++ b/src/assets/style/_code.scss
@@ -10,7 +10,7 @@ pre {
   padding: calc(var(--space) / 2);
   font-size: .85em;
   background-color: var(--bg-code);
-  margin-bottom: var(--space);
+  margin-bottom: 2em;
   border: 1px solid var(--border-color);
   border-radius: var(--radius);
 }
